--- a/style.css
+++ b/style.css
@@ -528,7 +528,7 @@
   .section_RecipeWeek
   .section_RecipeWeek_row
   .section_RecipeWeek_row_col:nth-of-type(1) {
-  background: url("../image/banana-leaves--1649677781\ \(1\).jpg");
+  background: url("banana-leaves--1649677781\ \(1\).jpg");
 }
 *
   body
